# captable

./: .gitignore  LICENSE  README.md  captable.cabal  stack.yaml
app/: Main.hs
src/: CapTable.hs
src/CapTable/: Types.hs
test/: Spec.hs
