name:                captable
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myshoggoth/captable#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew F. Boardman
maintainer:          andrew@myshoggoth.com
copyright:           2017 Andrew F. Boardman
category:            Finance
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CapTable
                     , CapTable.Types
  build-depends:       base >= 4.7 && < 5
                     , time
                     , lens
                     , generic-lens
                     , mtl
  default-language:    Haskell2010

executable captable-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , captable
                     , time
                     , lens
                     , mtl
  default-language:    Haskell2010

test-suite captable-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , captable
                     , time
                     , lens
                     , mtl
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myshoggoth/captable
